--- a/CV HTML/index.html
+++ b/CV HTML/index.html
@@ -23,16 +23,16 @@
         <div class="box1">
             <div class="box1_1">
                 <div class="title">
-                    <p> <strong>CONTACTO</strong></p>
+                    <h2> <strong>CONTACTO</strong></h2>
                     <hr> 
                 </div>
                 <p> <i class="fa-solid fa-phone"></i>  99999999</p>
-                <p> <i class="fa-solid fa-envelope"></i>  josemartinez@gmail.com</p>
-                <p> <i class="fa-solid fa-location-pin"></i>  Mexico DF</p>
-                <p> <i class="fa-brands fa-linkedin"></i>  linkedin.com/jose-marrtinez</p>
+                <p> <i class="fa-solid fa-envelope"></i>  chibolomeepogaa@gmail.com</p>
+                <p> <i class="fa-solid fa-location-pin"></i>  Perusalen</p>
+                <p> <i class="fa-brands fa-linkedin"></i>  linkedin.com/ChMeepo</p>
                 <br>
                 <div class="title">
-                    <p> <strong>IDIOMAS</strong></p>
+                    <h2> <strong>IDIOMAS</strong></h2>
                     <hr> 
                 </div>
                 <p>Español Nativo</p>
@@ -40,7 +40,7 @@
                 <p>Francés: Intermedio (B2)</p>
                 <br>
                 <div class="title">
-                    <p> <strong>APTITUDES</strong></p>
+                    <h2> <strong>APTITUDES</strong></h2>
                     <hr> 
                 </div>
                 <li type="disc">Inteligencia emocional</li>
@@ -50,7 +50,7 @@
                 <li type="disc">Habilidades fisicas</li>
                 <br>
                 <div class="title">
-                    <p> <strong>HABILIDADES</strong></p>
+                    <h2> <strong>HABILIDADES</strong></h2>
                     <hr> 
                 </div>
                 <li type="disc">Acondicionamiento Fisico</li>
@@ -59,7 +59,7 @@
                 <li type="disc">Tenis</li>
                 <br>
                 <div class="title">
-                    <p> <strong>OTROS INTERES</strong></p>
+                    <h2> <strong>OTROS INTERES</strong></h2>
                     <hr> 
                 </div>
                 <li type="disc">Creador de yincanas</li>
@@ -70,12 +70,12 @@
         <div class="box2">
             <div class="box2_1">
                 <div class="title">
-                    <p> <strong>PERFIL</strong></p>
+                    <h2> <strong>PERFIL</strong></h2>
                     <hr> 
                 </div>
                 <p>Trabajador Social con 4 años de experiencia en proyectos colectivos, Mi objetivo es lograr que los jovenes obtengan acceso a la educacion superior mediante logros deportivos</p>
                 <div class="title">
-                    <p> <strong>EXPERIENCIA LABORAL</strong></p>
+                    <h2> <strong>EXPERIENCIA LABORAL</strong></h2>
                     <hr> 
                 </div>
                 <div class="title">
@@ -103,7 +103,7 @@
                 <li type="disc"> Coordinador de areas deportivas</li>
                 <br>
                 <div class="title">
-                    <p> <strong>FORMACION</strong></p>
+                    <h2> <strong>FORMACION</strong></h2>
                     <hr> 
                 </div>
                 <p><strong> Grado de Trabajo Social</strong></p>
